:bug: Fix map width on small screens

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -109,10 +109,26 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
 }
 
+.gmap {
+  padding-top:50px;
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  max-width: 90%;
+  margin:0 auto;
+}
+
 /* Media query for smartphones (max-width: 767px) */
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .rsvp-form {
       width: 90%;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .gmap {
+    width: 90%;
+    height:auto;
   }
 }
 
